Fixed typo on post 7

--- a/posts/7.md
+++ b/posts/7.md
@@ -10,7 +10,7 @@ ordering of the actual commits.
 The message in a commit is where an explanation for the change should reside.
 This should include at the very least what was changed, and why.
 
-Some examples of a bad commit messages include (and yes, ):
+Some examples of a bad commit messages include (and yes, I have seen these kind of commits from multiple developers on different projects):
 
 > fixed bug
 
@@ -18,7 +18,7 @@ and
 
 > refactored stuff
 
-I have seen these kind of commits from multiple developers on different projects. A more descriptive commit message would look something like
+A more descriptive commit message would look something like
 
 > Fix ImageProcessingFactory not handling images less than 50px wide
 
