--- a/posts/11.md
+++ b/posts/11.md
@@ -11,7 +11,7 @@ This is partly our own fault for not keeping our dependencies up to date, but al
 ## 2. Using Flow felt like a chore
 
 I saw over time, developers would treat flow like they treat a linter, only correcting things when there was an error in build, rather than constructing types as they went along.
-This suggested that my team weren't in favour of using flow (or maybe even a type system at all)<sup id="a1">[1](#f1)</sup>.
+This suggested that my team weren't in favour of using flow (or maybe even a type system at all)<sup id="a1">[[1]](#f1)</sup>.
 If you only run type checks, after you have a feature working, it becomes a pain to go back and correct errors, even if they may be legitimate errors. This then encourages poor type checking or laziness.
 
 ## 3. Poor community support
@@ -27,4 +27,4 @@ This results in fewer errors, and actually _less_ time spent debugging, than if 
 
 These are just a few of the reasons as to why I've switched over a few of my projects to TypeScript recently, and is certain not an exhaustive list.
 
-<b id="f1">1</b> Turns out my team _did_ like typechecking, but would not run it alongside their editing, so would often forgetgst. [↩](#a1)
+<b id="f1">**1**</b> Turns out my team _did_ like typechecking, but would not run it alongside their editing, so would often forgetgst. [↩](#a1)
