--- a/posts/11.md
+++ b/posts/11.md
@@ -27,4 +27,4 @@ This results in fewer errors, and actually _less_ time spent debugging, than if 
 
 These are just a few of the reasons as to why I've switched over a few of my projects to TypeScript recently, and is certain not an exhaustive list.
 
-<b id="f1">**1**</b> Turns out my team _did_ like typechecking, but would not run it alongside their editing, so would often forgetgst. [↩](#a1)
+<b id="f1">**1**</b> Turns out my team _did_ like typechecking, but would not run it alongside their editing, so would often forget. [↩](#a1)
