Fix typo in blog 7

--- a/posts/7.md
+++ b/posts/7.md
@@ -1,4 +1,4 @@
-Ensuring the git history of your project (or any version controller project) can be an incredibly useful asset.
+Ensuring the git history of your project (or any version controlled project) can be an incredibly useful asset.
 In particular for new developers, trying to understand why code has been written in a certain way.
 With clear and ordered commit messages, it can become obvious as to why a change was made. 
 
