Switch to nextJS

--- a/public/posts/12.md
+++ b/public/posts/12.md
@@ -1,6 +1,6 @@
 Most of the time in React you will pass an onClick handler to a button, and whenever that button is click, expect that function to be called.
 
-```jsx
+```javascript
 <button onClick={() => console.log("I was called")}>Click me</button>
 ```
 
@@ -20,7 +20,7 @@ The steps would be:
 
 Below is a custom component that handles doubleclicking of buttons. All of its props are passed down to the HTML `button` element, except the `onClick` handler, which we will wrap with our custom logic.
 
-```jsx
+```javascript
 import React from "react";
 
 class PreventDoubleClickButton extends React.component {
