--- a/public/posts/13.md
+++ b/public/posts/13.md
@@ -1,7 +1,7 @@
 [Pyodide](https://github.com/iodide-project/pyodide) is a new project from Mozilla.
 It aims to bring python into the browser, making use of WebAssembly. You can read the full blog post at [https://hacks.mozilla.org/2019/04/pyodide-bringing-the-scientific-python-stack-to-the-browser/](https://hacks.mozilla.org/2019/04/pyodide-bringing-the-scientific-python-stack-to-the-browser/).
 
-I wanted to try it out, and see how easy it would be run python in the browser, while also being able to interact with the DOM, as I would normally do in javascript. Turns out, Pyodide makes this really simeple. Pyodide will proxy javascript objects with their python counter parts, in a way that feels very seamless.
+I wanted to try it out, and see how easy it would be run python in the browser, while also being able to interact with the DOM, as I would normally do in javascript. Turns out, Pyodide makes this really simple. Pyodide will proxy javascript objects with their python counter parts, in a way that feels very seamless.
 
 After I had got the project setup, I decided to have a go and running a small React application, written in Python.
 As React isn't actually dependant on JSX syntax, this is trivial to get running thanks to Pyodide. All React components just have to return `React.createElement` calls instead (which babel would normally translate JSX code into).
