Switch to making inline code bold

--- a/public/posts/13.md
+++ b/public/posts/13.md
@@ -4,7 +4,7 @@ It aims to bring python into the browser, making use of WebAssembly. You can rea
 I wanted to try it out, and see how easy it would be run python in the browser, while also being able to interact with the DOM, as I would normally do in javascript. Turns out, Pyodide makes this really simple. Pyodide will proxy javascript objects with their python counter parts, in a way that feels very seamless.
 
 After I had got the project setup, I decided to have a go and running a small React application, written in Python.
-As React isn't actually dependant on JSX syntax, this is trivial to get running thanks to Pyodide. All React components just have to return `React.createElement` calls instead (which babel would normally translate JSX code into).
+As React isn't actually dependant on JSX syntax, this is trivial to get running thanks to Pyodide. All React components just have to return **React.createElement**` calls instead (which babel would normally translate JSX code into).
 
 The result:
 
