--- a/public/posts/12.md
+++ b/public/posts/12.md
@@ -1,4 +1,4 @@
-*UPDATE 5th August 2024*: An updated version of this post, using React Hooks is available at: [https://amwam.me/blog/preventing-double-clicks-in-react-with-hooks]
+*UPDATE 5th August 2024*: An updated version of this post, using React Hooks is available at: [https://amwam.me/blog/preventing-double-clicks-in-react-with-hooks](https://amwam.me/blog/preventing-double-clicks-in-react-with-hooks)
 --- 
 Most of the time in React you will pass an onClick handler to a button, and whenever that button is click, expect that function to be called.
 
