Switch to using JavaScript as the markdown processor for now
Prism isn’t setup for JSX so fallback to javascript

--- a/public/posts/15.md
+++ b/public/posts/15.md
@@ -6,7 +6,7 @@ When building interactive web applications, it's crucial to prevent users from a
 
 Consider a form submission button:
 
-```jsx
+```javascript
 function SubmitButton() {
   const handleSubmit = () => {
     // Perform some action, e.g., API call
@@ -21,7 +21,7 @@ If a user clicks this button twice quickly, the `handleSubmit` function will be 
 
 We can prevent double clicks by disabling the button immediately after it's clicked. Here's how we can implement this using React hooks:
 
-```jsx
+```javascript
 import React from "react";
 
 function submitForm() {
@@ -71,7 +71,7 @@ Let's break down this implementation:
 
 We can also take this a step further, and create our own hook to extract this logic.
 
-```jsx
+```javascript
 import React from 'react';
 
 function submitForm() {
