--- a/posts/15.md
+++ b/posts/15.md
@@ -1,4 +1,4 @@
-This is a follow up to my previous post, about preventing double clicks in React, this time using [React Hooks](https://react.dev/reference/react/hooks).
+This is a follow up to [my previous post](https://amwam.me/blog/preventing-double-clicks-in-react), about preventing double clicks in React, this time using [React Hooks](https://react.dev/reference/react/hooks).
 
 When building interactive web applications, it's crucial to prevent users from accidentally submitting forms or triggering actions multiple times. One effective and user-friendly approach is to disable the button immediately after it's clicked.
 
